test/corpus/apply1.txt
===========
Apply1 Core
===========

f x

---

(program
    (apply1
        (id)
        (id)))

===============
Apply1 Chaining
===============

f g h x

---

(program
    (apply1
        (id)
        (apply1
            (id)
                (apply1
                    (id)
                    (id)))))

=================
Multi-line Apply1
=================

f "
	lorem ipsum
" x

---

(program
    (apply1
        (id)
        (apply1
            (string
                (linefeed)
                (strblock
                    (stx_line)
                    (linefeed)))
            (id))))
