test/corpus/apply3.txt
===========
Apply3 Core
===========

f
x

---

(program
	(apply3
		(id)
		(id)))

=====================
Apply3 Block-chaining
=====================

f
g
x

---

(program
	(apply3
		(id)
		(apply3
			(id)
				(id))))

===========
Apply3 of 2
===========

f
	x
y

---

(program
	(apply3
		(apply2
			(id)
				(id))
		(id)))

=============
Apply3 of 2-2
=============

f
	g
		x
y

---

(program
	(apply3
		(apply2
			(id)
				(apply2
					 (id)
				 (id)))
		(id)))

=============
Apply3 of 2-3
=============

f
	g
		h
		x
y

---

(program
	(apply3
		(apply2
			(id)
			(apply2
				 (id)
				 (apply3
						 (id)
						 (id))))
		(id)))

=============
Apply3 of 3-2
=============

f
	g
		x
	y
z

---

(program
	(apply3
		(apply2
			(id)
				(apply3
					 (apply2
					(id)
					 (id))
					 (id)))
		(id)))
