test/corpus/strings.txt
===========================
Simple Double-quoted String
===========================

"lorem ipsum"

---

(program
    (string
        (stx_dquo)))

==============================
Multiline Double-quoted String
==============================

"
		Lorem ipsum
		-----------

	dolor sit amet, consec-
	tetur adipiscing elit
"

---

(program
    (string
    	(linefeed)
    	(blockquoted
      	   	(blockquoted
          		(stx_line)
           		(linefeed)
             	(stx_line)
             	(linefeed))
          	(stx_line)
           (linefeed)
           (stx_line)
           (linefeed))))

==============
Line splitting
==============

"lorem`{
} ipsum"

---

(program
    (string
        (stx_dquo)
        (stx_dquo)))

=======================
Pseudo-multiline String
=======================

"
	actually`{
	} one`{
	} liner
"

---

(program
	(string
        (linefeed)
        (blockquoted
          (stx_line)
          (stx_line)
          (stx_line)
          (linefeed))))

=============
Interpolation
=============

"lorem `{f x} ipsum"

---

(program
    (string
        (stx_dquo)
        (interpol8
            (applyi
                (id)
                (id)))
        (stx_dquo)))

===============
Interpolception
===============

"lorem `{f "`{g x}"} ipsum"

---

(program
    (string
        (stx_dquo)
        (interpol8
            (applyi
                (id)
                (string
                    (interpol8
                    (applyi
                        (id)
                        (id))))))
        (stx_dquo)))

===================
Block interpolation
===================

"lorem`{
	f
		x
} ipsum"

---

(program
    (string
        (stx_dquo)
        (interpol8
            (program
            (apply2
                (id)
                (id))))
        (stx_dquo)))

=====================
Block interpolception
=====================

"`{"`{
	f
		x
}"}"

---

(program
	(string
		(interpol8
			(string
        		(interpol8
          			(program
             			(apply2
                			(id)
                   			(id))))))))

=======================
Multiline interpolation
=======================

"
	lorem`{
		f g
			x
		y
	} ipsum
"

---

(program
    (string
    	(linefeed)
	    (blockquoted
	    	(stx_line)
	       	(interpol8
	        	(program
	          		(apply3
	            		(apply2
                            (id)
	              			(apply2
	                 			(id)
	                    		(id)))
	              		(id))))
	        (stx_line)
	        (linefeed))))

================
No interpolation
================

"lorem `f x` ipsum"

---

(program
    (string
    	(stx_dquo)
    	(stx_dquo)
    	(stx_dquo)
    	(stx_dquo)
        (stx_dquo)))
